--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://www.jitpack.io" }
     }
 }
 
